added internationalization i18n to full app

--- a/university/src/main/resources/i18n/message.properties
+++ b/university/src/main/resources/i18n/message.properties
@@ -6,3 +6,52 @@ login.logIn = Log In
 login.english = English
 login.ukrainian = Ukrainian
 login.create_account = Create account
+
+sidebar.menu=Menu
+sidebar.home=Home
+sidebar.fill_marks=Fill marks
+sidebar.create_faculty=Create faculty
+sidebar.show_all_requests=Show all requests
+sidebar.show_university=Show university
+sidebar.university_welcome=University        Welcome 
+sidebar.logout=Logout
+
+home.delete_faculty=Delete faculty
+home.faculty_name=Faculty name
+home.student_quantity=Student quantity
+home.required_mark_average=Required mark average
+home.from_subjects=From subjects:
+home.register_to_faculty=Register to faculty
+
+fill_marks.title=Fill marks
+fill_marks.fill_your_marks=Fill your marks
+fill_marks.submit=Submit
+fill_marks.marks_added_successful=Marks added Successful
+
+create_faculty.title=Create faculty
+create_faculty.name=Name
+create_faculty.quantity=Student Quantity
+create_faculty.mark_level=Required marks level
+create_faculty.submit=Submit
+
+all_requests.title=All requests
+all_requests.to_faculty=To faculty
+all_requests.student_name=Student name
+all_requests.student_lastname=Student last name
+all_requests.submit=Accept request
+
+university.university=UNIVERSITY
+university.id=Id
+university.faculty_name=Name
+university.quantity=Student Quantity
+university.level=RequiredLevel
+university.student_present=Student Present
+university.image=Image
+university.name=Name
+university.lastname=Lastname
+university.action=Action
+university.delete=delete
+
+
+
+
