--- a/university/src/main/resources/i18n/message_ua.properties
+++ b/university/src/main/resources/i18n/message_ua.properties
@@ -6,3 +6,48 @@ login.logIn = Увійти
 login.english = Англійська
 login.ukrainian = Українська
 login.create_account = Створити профіль
+
+sidebar.menu=Меню
+sidebar.home=Дім
+sidebar.fill_marks=Заповнити оцінки
+sidebar.create_faculty=Створити факультет
+sidebar.show_all_requests=Показати всі запити
+sidebar.show_university=Показати університет
+sidebar.university_welcome=Університет        Вітаю 
+sidebar.logout=Вихід
+
+home.delete_faculty=Видалити факультет
+home.faculty_name=Назва факультету
+home.student_quantity=Містить студентів
+home.required_mark_average=Середній бал факультету
+home.from_subjects=З наступних предметів:
+home.register_to_faculty=Зареєструватись на факультет
+
+fill_marks.title=Заповнення оцінок
+fill_marks.fill_your_marks=Заповніть свої оцінки 
+fill_marks.submit=Зберегти
+fill_marks.marks_added_successful=Оцінки додані успішно
+
+create_faculty.title=Створити факультет
+create_faculty.name=Назва
+create_faculty.quantity=Кількість місць
+create_faculty.mark_level=Вимога середнього балу
+create_faculty.submit=Створити
+
+all_requests.title=Всі запити
+all_requests.to_faculty=На факультет
+all_requests.student_name=Ім'я студента
+all_requests.student_lastname=Прізвище студента
+all_requests.submit=Прийняти запит
+
+university.university=УНІВЕРСИТЕТ
+university.id=Ід
+university.faculty_name=Назва факультету
+university.quantity=Кількість місць
+university.level=Середній бал
+university.student_present=Зараховано студентів
+university.image=Малюнок
+university.name=Ім'я
+university.lastname=Прізвище
+university.action=Дія
+university.delete=видалити
